# schoolsoft-api

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  schedule_sorter.py  schoolsoft_api.py
docs/: auth.md  get_calendar_student_lessons.txt  right_student_lesson_status_ajax.txt
schoolsoft/: __init__.py  api.py  auth.py  calendar.py  exceptions.py  localization.py  lunch_menu.py  models.py  schoolsoft.py  student.py  utils.py
tests/: schedule_sorter.py  test_api.py  test_auth.py  test_calendar.py  test_localization.py  test_lunch_menu.py  test_student.py  test_utils.py
